packages/svelte/tests/compiler-errors/samples/css-global-block-in-pseudoclass/main.svelte
<style>
	/* invalid */
	:is(:global) { color: red }
</style>
